kuberentes-resources/backend-1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-1-deployment
  labels:
    app: backend-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend-1
  template:
    metadata:
      labels:
        app: backend-1
    spec:
      containers:
      - name: backend-1
        image: 068425271656.dkr.ecr.eu-west-1.amazonaws.com/eks_container_repo/backend-1
        ports:
        - containerPort: 80
        resources:
              requests:
                memory: "64Mi"
                cpu: "250m"
              limits:
                memory: "128Mi"
                cpu: "500m"
           
---
apiVersion: v1
kind: Service
metadata:
  name: backend-1-service
spec:
  selector:
    app: backend-1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
