kuberentes-resources/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: coco-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2

spec:
  rules:
  - host: "*.com"
    http:
      paths:
      - path: /
        backend:
          serviceName: frontend-service
          servicePort: 80
      - path: /backend-1-service(/|$)(.*)
        backend:
          serviceName: backend-1-service
          servicePort: 80
